2010-09-15  Noel O'Boyle

	* src/builder.cpp: When correcting stereo on rings, handle the case of
	the lone pair. Thanks to Peter Lavin for reporting.

2010-09-15  Noel O'Boyle

	* src/formats/smilesformat.cpp: Handle chiral S with a lone pair in
	the SMILES writer. Fixes PR#3058701. The test cases in the previous
	commit log message should actually be C[S@](=O)Cl, etc. to be
	chemically correct.

2010-09-14  Noel O'Boyle

	* src/formats/smilesformat.cpp: Handle chiral S with a lone pair and
	in general, the situation where a chiral atom has a lone pair.
	Test cases: C[S@](Br)I, [S@](C)(Br)I, C[C@-](Br)I, C[S@](=O)(=O)Cl.

2010-09-14  Noel O'Boyle

	* CMakeLists.txt: As discussed on list, don't build all bindings when
	RUN_SWIG=ON (building some bindings may cause errors). Instead, the
	option ALL_BINDINGS=ON will build all bindings.

2010-09-10  Noel O'Boyle

	* src/formats/pdbqtformat.cpp: Remove "ent" designation as this is
	already used by the .pdb file format.

2010-09-09  Noel O'Boyle

	* scripts/python/pybel_py*.x.py: Synch with cinfony. Add support for
	MCDL 2D coordinate generation when calling 'draw()'. MCDL is the
	default. To use	OASA, specify method="oasa".

2010-09-07  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* include/openbabel/base.h: Add new UNUSED() macro for unused
	parameters.

	* include/openbabel/forcefield.h: Use it.

	* src/kekulize.cpp: Decrease recursion level from 31 to
	24. Prevents some crashing / "infinite" loops on large fused-ring
	systems.

	* src/formats/pdbqtformat.cpp: Add new format from Stuart
	Armstrong, InHiBOx.

	* src/formats/CMakeLists.txt: Ditto.

2010-08-26 Noel O'Boyle

	* src/formats/mdlformat.cpp: Chris beat me to one fix (see below), but
	I also added code to handle unspecified cis/trans stereo
	* test/testsym.cpp: Correct test results and add some new ones for the
	-as option (with 0D MDL).

2010-08-26 Chris Morley

	* src/depict/depict.cpp(DrawMolecule): fix so works with empty molecules